<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rqt_dep</name>
  <version>0.4.12</version>
  <description>rqt_dep provides a GUI plugin for visualizing the ROS dependency graph.</description>
  <maintainer email="ivanpauno@ekumenlabs.com">Ivan Paunovic</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rqt_dep</url>
  <url type="repository">https://github.com/ros-visualization/rqt_dep</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_dep/issues</url>

  <author>Aaron Blasdel</author>
  <author>Dirk Thomas</author>
  <author>Thibault Kruse</author>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend version_gte="1.1.2">qt_dotgraph</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>python3-rospkg</exec_depend>
  <exec_depend>qt_gui_py_common</exec_depend>
  <exec_depend>rqt_graph</exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <qt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
